# redistricting-sim

./: .gitignore  AGENTS.compressed.md  AGENTS.md  LICENSE  MODULE.bazel  README.md  deployment-metadata.json  index.html
.buildkite/: pipeline.yml
.github/workflows/: ci.yml
dev/: bundle.js  deployment-metadata.json  index.html  styles.css
dev/scenarios/: scenario-003.json  scenario-004.json  scenario-007.json  scenario-009.json  tutorial-001.json
game/: .bazelrc  .gitignore  BUILD-NOTES.md  BUILD.bazel  MODULE.bazel  PROGRESS.md  deploy-assemble.sh  deploy-prod.sh  deploy-staging.sh  deploy.sh  package-lock.json  package.json  pnpm-lock.yaml  prepare-release.sh  prepare_release.sh  release.main.kts  serve.sh  setup.sh
game/_deploy_out/: bundle.js
game/_deploy_out/scenarios/: scenario-008.json  scenario-009.json
game/_serve_dist/: bundle.js  index.html  wasm_calc_bindgen.js
game/patches/: BUILD.bazel  aspect_rules_esbuild_bazel9.patch
game/rust/: BUILD.bazel
game/scenarios/: BUILD.bazel  gen-scenario-002.main.kts  gen-scenario-003.main.kts  gen-scenario-004.main.kts  gen-scenario-005.main.kts  gen-scenario-006.main.kts  gen-scenario-007.main.kts  gen-scenario-008.main.kts  gen-scenario-009.main.kts  gen-tutorial-002.main.kts  scenario-002.json  scenario-003.json  scenario-004.json  scenario-005.json  scenario-006.json  scenario-008.json  tutorial-002.json
game/web/: BUILD.bazel  e2e_test.sh  index.html  playwright.config.ts  styles.css  tsconfig.json
game/web/assets/audio/: INVENTORY.md  download-clips.sh
game/web/assets/characters/: ALT-TEXT.md
game/web/e2e/: a11y.spec.ts  campaign-select.spec.ts  main-menu.spec.ts  scenarios.spec.ts  smoke.spec.ts  sprint1.spec.ts  sprint2.spec.ts  sprint3.spec.ts  sprint4.spec.ts  submit-on-invalid.spec.ts
game/web/src/: main.ts
game/web/src/audio/: BUILD.bazel  audioPlayer.ts  audioPlayer_test.ts
game/web/src/model/: BUILD.bazel  adapter.ts  adapter_test.ts  campaigns.ts  campaigns_test.ts  generator.ts  hex-geometry.ts  hex-geometry_test.ts  loader.ts  loader_test.ts  progress.ts  progress_test.ts  progress_wip_test.ts  scenario.ts  tsconfig.json  types.ts
game/web/src/render/: mapRenderer.ts  panels.ts
game/web/src/simulation/: BUILD.bazel  election.ts  election_test.ts  evaluate.ts  evaluate_test.ts  validity.ts  validity_test.ts
game/web/src/store/: BUILD.bazel  gameStore.ts  gameStore_test.ts
game/web/src/testing/: BUILD.bazel  test_runner.ts  tsconfig.json
memory/: feedback_no_inline_python.md
scenarios/: scenario-003.json
spike/001-game-poc/: PROGRESS.md  SPIKE-REPORT.md  biome.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
spike/001-game-poc/src/: main.ts
spike/002-build-poc/: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  PROGRESS.md  SPIKE-REPORT.md  serve.sh
spike/002-build-poc/rust/: BUILD.bazel
spike/002-build-poc/rust/src/: lib.rs  wasm_entry.rs
spike/002-build-poc/web/: BUILD.bazel  index.html  tsconfig.json
spike/002-build-poc/web/src/: main.ts
staging/: bundle.js  deployment-metadata.json  index.html  wasm_calc_bindgen_bg.wasm
staging/scenarios/: scenario-002.json  scenario-007.json
thoughts/shared/decisions/: 2026-04-24-demographic-group-model.compressed.md  2026-04-24-demographic-group-model.md  2026-04-24-election-simulation-architecture.compressed.md  2026-04-24-election-simulation-architecture.md  2026-04-24-map-geography-and-rendering-architecture.compressed.md  2026-04-24-map-geography-and-rendering-architecture.md  2026-04-24-scenario-data-format.compressed.md  2026-04-24-scenario-data-format.md  2026-04-27-dimensional-dot-map-design.compressed.md  2026-04-27-dimensional-dot-map-design.md  2026-04-27-game-name.md
thoughts/shared/plans/: 2026-04-25-sprint-roadmap.compressed.md  2026-04-25-sprint-roadmap.md
thoughts/shared/research/: 2026-04-23-agent-team-and-workflow-design.compressed.md  2026-04-23-agent-team-and-workflow-design.md  2026-04-24-election-simulation-and-evaluation-metrics.compressed.md  2026-04-24-election-simulation-and-evaluation-metrics.md  2026-04-24-precinct-count-calibration.compressed.md  2026-04-24-precinct-count-calibration.md  2026-04-24-vra-and-bloc-voting-model.compressed.md  2026-04-24-vra-and-bloc-voting-model.md  2026-04-25-project-build-hygiene.compressed.md  2026-04-25-project-build-hygiene.md  2026-04-27-design-003-color-encoding-research.compressed.md  2026-04-27-design-003-color-encoding-research.md  2026-04-27-dimensional-dot-map-design-research.compressed.md  2026-04-27-dimensional-dot-map-design-research.md  2026-04-27-gameplay-critique.md  2026-04-28-legal-content-risk-assessment.md  2026-05-02-design-001-achievement-star-system.compressed.md  2026-05-02-design-001-achievement-star-system.md  2026-05-02-design-009-character-reaction-visual-style.compressed.md  2026-05-02-design-009-character-reaction-visual-style.md
thoughts/shared/tickets/: AGENT-001-compressed-abbrev-dollar-prefix.md  AGENT-002-pr-review-cycle-kotlin-tools.md  AGENT-003-infra-pr-review-bot-comment-handling.md  BUILD-002-integrate-spikes-into-bazel.md  BUILD-003-ts-rules-spawn-strategy-research.md  BUILD-004-playwright-bzl-macro.md  BUILD-005-content-security-policy.md  BUILD-006-extract-inline-styles.md  BUILD-007-shared-test-runner.md  BUILD-008-switch-ci-to-pnpm.md  BUILD-009-content-hash-bundle.md  CI-002-playwright-behavioral-tests.md  DESIGN-001-achievement-star-system.md  DESIGN-002-view-toggle-ux.md  DESIGN-003-districts-view-color-encoding.md  DESIGN-004-legend-layout.md  DESIGN-005-population-dot-density-overlay.md  DESIGN-006-zoom-adaptive-dot-density.md  DESIGN-007-dimensional-dot-map-demographic-overlay.md  DESIGN-008-geographic-features.md  DESIGN-009-character-reaction-visual-style.md  DIST-001-steam-deployment-research.md  GAME-001-scenario-typescript-types.md  GAME-002-scenario-loader-validator.md  GAME-006-scenario-compression.md  (+68 more)
tools/: gen-assets.main.kts  gen-assets.test.main.kts  gen-sprites.main.kts  gen-sprites.test.main.kts  gh-pr-checks.main.kts  gh-pr-list.main.kts  sprite-spec.json
(+8 files in other folders)
