load("@aspect_rules_esbuild//esbuild:defs.bzl", "esbuild")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config", "ts_project")
load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
)

# Type-check target: verifies TypeScript types without producing runtime output.
# Note: src/model/ is a separate Bazel package (owns BUILD.bazel); glob does not
# cross package boundaries, so model targets are listed explicitly as deps.
ts_project(
    name = "app_typecheck_lib",
    srcs = glob(["src/**/*.ts"]),
    tsconfig = ":tsconfig",
    deps = [
        "//:node_modules/d3",
        "//:node_modules/@types/d3",
        "//:node_modules/zustand",
        "//:node_modules/zundo",
        "//web/src/model:loader_lib",
        "//web/src/model:model_lib",
        "//web/src/model:types_lib",
        "//web/src/model:generator_lib",
        "//web/src/model:adapter_lib",
    ],
)

# build_test: confirms type checking passes under bazel test //...
build_test(
    name = "app_typecheck_test",
    targets = [":app_typecheck_lib"],
    visibility = ["//visibility:public"],
)

# esbuild bundles TypeScript + npm deps into a single browser-ready JS file.
# Note: src/model/ is a separate Bazel package; model sources are provided via
# deps on //web/src/model targets.
esbuild(
    name = "app",
    srcs = glob(["src/**/*.ts"]),
    entry_point = "src/main.ts",
    deps = [
        "//:node_modules/d3",
        "//:node_modules/zustand",
        "//:node_modules/zundo",
        "//web/src/model:loader_lib",
        "//web/src/model:model_lib",
        "//web/src/model:types_lib",
        "//web/src/model:generator_lib",
        "//web/src/model:adapter_lib",
    ],
    output = "bundle.js",
    format = "esm",
    # Mark react as external: zustand ships React bindings that are not used here
    # (we use zustand/vanilla). The bazel-sandbox plugin would fail trying to bundle
    # react since it is not a declared dependency.
    external = ["react", "react-dom"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "html",
    srcs = ["index.html"],
    visibility = ["//visibility:public"],
)

# Playwright behavioral (e2e) smoke test — CI-002 Phase 1.
#
# Assembles Bazel-built artifacts into a temp dir, starts python3 http.server
# on port 58173, and runs pnpm exec playwright test against it.
#
# local = True: Playwright requires a host Chromium browser binary installed
# outside the Bazel sandbox. Run `./setup.sh` once per machine/workspace to
# install node_modules and Playwright browsers via pnpm exec playwright install.
#
# One-time setup outside Bazel:
#   cd game && ./setup.sh
sh_test(
    name = "e2e_test",
    srcs = ["e2e_test.sh"],
    data = [
        ":app",
        ":html",
        "//rust:wasm_calc_bindgen",
        "//scenarios:scenario_files",
        "playwright.config.ts",
        "e2e/smoke.spec.ts",
    ],
    local = True,
    tags = [
        "no-sandbox",
        "e2e",
    ],
    visibility = ["//visibility:public"],
)
