load("@aspect_rules_esbuild//esbuild:defs.bzl", "esbuild")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config", "ts_project")
load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@bazel_skylib//rules:copy_file.bzl", "copy_file")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
)

# Type-check target: verifies TypeScript types without producing runtime output.
# Note: src/model/ is a separate Bazel package (owns BUILD.bazel); glob does not
# cross package boundaries, so model targets are listed explicitly as deps.
ts_project(
    name = "app_typecheck_lib",
    srcs = glob(["src/**/*.ts"]),
    tsconfig = ":tsconfig",
    deps = [
        "//:node_modules/d3",
        "//:node_modules/@types/d3",
        "//:node_modules/zustand",
        "//:node_modules/zundo",
        "//web/src/model:loader_lib",
        "//web/src/model:model_lib",
        "//web/src/model:types_lib",
        "//web/src/model:hex_geometry_lib",
        "//web/src/model:generator_lib",
        "//web/src/model:adapter_lib",
        "//web/src/model:progress_lib",
        "//web/src/simulation:election_lib",
        "//web/src/simulation:validity_lib",
        "//web/src/simulation:evaluate_lib",
    ],
)

# build_test: confirms type checking passes under bazel test //...
build_test(
    name = "app_typecheck_test",
    targets = [":app_typecheck_lib"],
    visibility = ["//visibility:public"],
)

# esbuild bundles TypeScript + npm deps into a single browser-ready JS file.
# Note: src/model/ is a separate Bazel package; model sources are provided via
# deps on //web/src/model targets.
esbuild(
    name = "app",
    srcs = glob(["src/**/*.ts"]),
    entry_point = "src/main.ts",
    deps = [
        "//:node_modules/d3",
        "//:node_modules/zustand",
        "//:node_modules/zundo",
        "//web/src/model:loader_lib",
        "//web/src/model:model_lib",
        "//web/src/model:types_lib",
        "//web/src/model:hex_geometry_lib",
        "//web/src/model:generator_lib",
        "//web/src/model:adapter_lib",
        "//web/src/model:progress_lib",
        "//web/src/simulation:election_lib",
        "//web/src/simulation:validity_lib",
        "//web/src/simulation:evaluate_lib",
    ],
    output = "bundle.js",
    format = "esm",
    # Mark react as external: zustand ships React bindings that are not used here
    # (we use zustand/vanilla). The bazel-sandbox plugin would fail trying to bundle
    # react since it is not a declared dependency.
    external = ["react", "react-dom"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "html",
    srcs = ["index.html", "styles.css"],
    visibility = ["//visibility:public"],
)

# Playwright behavioral (e2e) smoke test — CI-002 Phase 1.
#
# Assembles Bazel-built artifacts into a temp dir, starts python3 http.server
# on port 58173, and runs pnpm exec playwright test against it.
#
# local = True: Playwright requires a Chromium browser binary installed
# outside the Bazel sandbox. Run `./setup.sh` once per machine to install
# node_modules and download the managed Playwright Chromium.
#
# One-time setup outside Bazel:
#   cd game && ./setup.sh
sh_test(
    name = "e2e_test",
    srcs = ["e2e_test.sh"],
    data = [
        ":app",
        ":html",
        "//rust:wasm_calc_bindgen",
        "//scenarios:scenario_files",
        "playwright.config.ts",
        "e2e/smoke.spec.ts",
        "e2e/sprint1.spec.ts",
        "e2e/sprint2.spec.ts",
        "e2e/sprint3.spec.ts",
        "e2e/scenarios.spec.ts",
        # Playwright packages as declared Bazel deps — ensures the cache key includes
        # the playwright version and the files are available in runfiles.
        "//:node_modules/@playwright/test",
    ],
    local = True,
    tags = [
        "no-sandbox",
        "e2e",
    ],
    visibility = ["//visibility:public"],
)

# Deployable package: bundles all game assets (HTML, CSS, JS, WASM, scenarios)
# into a single zip file ready for static hosting.
#
# Usage:
#   bazel build //web:deployable
#   unzip bazel-bin/web/deployable.zip -d /path/to/deploy
genrule(
    name = "deployable",
    srcs = [
        ":app",
        ":html",
        "//rust:wasm_calc_bindgen",
        "//scenarios:scenario_files",
    ],
    outs = ["deployable.zip"],
    cmd = """
        set -euo pipefail

        # Create staging directory
        STAGING="$$(mktemp -d)"
        trap "rm -rf $$STAGING" EXIT

        # Iterate over all source files and copy to appropriate location
        for f in $(SRCS); do
            fname="$$(basename "$$f")"
            case "$$fname" in
                index.html) cp "$$f" "$$STAGING/" ;;
                styles.css) cp "$$f" "$$STAGING/" ;;
                bundle.js) cp "$$f" "$$STAGING/" ;;
                *.wasm) cp "$$f" "$$STAGING/" ;;
                wasm_calc_bindgen.js) cp "$$f" "$$STAGING/" ;;
                *.json) mkdir -p "$$STAGING/scenarios" && cp "$$f" "$$STAGING/scenarios/" ;;
            esac
        done

        # Create zip file
        cd "$$STAGING"
        zip -q -r "$$OLDPWD/$(location deployable.zip)" .
    """,
    visibility = ["//visibility:public"],
)
